# aiida-cryspy

./: .gitignore  LICENSE  README.md  pyproject.toml
aiida_cryspy/data/: eadata.py  rindata.py  structurecollectiondata.py
aiida_cryspy/workflows/: EA_WorkChain.py  initialize_WorkChain.py  next_sg_WorkChain.py  optimization_WorkChain.py
example/: ibis.yaml
example/EA/: MatterSim_optimization_WorkChain_EA.py  cryspy.in  launch_ea.py  main.py  main_EA.py  main_EA_ver2.py  main_EA_ver3.py
example/EA/backup/20251015_203055/: cryspy.in
example/EA/backup/20251015_203055/data/: cryspy_rslt  cryspy_rslt_energy_asc  ea_info  init_POSCARS  opt_CIFS.cif  opt_POSCARS
example/EA/backup/20251015_205531/: cryspy.stat
example/EA/backup/20251015_205531/data/: cryspy_rslt  cryspy_rslt_energy_asc  init_POSCARS  opt_CIFS.cif  opt_POSCARS
example/EA/backup/20251015_211214/data/: cryspy_rslt  cryspy_rslt_energy_asc  init_POSCARS  opt_CIFS.cif  opt_POSCARS
example/EA/backup/20251016_161113/data/: cryspy_rslt_energy_asc
example/EA/backup/20251016_230516/data/: init_POSCARS
example/EA/backup/20251019_175802/: cryspy.in
example/EA/backup/20251019_182554/data/: ea_info  (+5 more)
example/EA/backup/20251023_174111/: cryspy.stat
example/EA/data/: cryspy_rslt  cryspy_rslt_energy_asc  init_POSCARS  opt_CIFS.cif
example/EA/data/pkl_data/: opt_struc_data.pkl
example/RS/: cryspy.in  cryspy.stat  main.py  main_RS.py
example/RS/data/: cryspy_rslt  init_POSCARS  opt_CIFS.cif  opt_POSCARS
example/RS/data/pkl_data/: init_struc_data.pkl  input_data.pkl  opt_struc_data.pkl  rslt_data.pkl
(+96 files in other folders)
